--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/mongodb-driver-sync-4.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/bson-4.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/mongodb-driver-core-4.11.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-simple-2.0.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-api-2.0.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
