--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,16 @@
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/mongodb-driver-core-4.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-simple-2.0.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-api-2.0.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/mtj-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/weka-3-8-6/weka-3-8-6/remoteExperimentServer.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/weka-3-8-6/weka-3-8-6/weka.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/weka-3-8-6/weka-3-8-6/weka-src.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/opencsv-5.10.jar"/>
+	<classpathentry kind="lib" path="resourses"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/commons-lang3-3.17.0-bin/commons-lang3-3.17.0/commons-lang3-3.17.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/jackson-annotations-2.15.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/jackson-core-2.15.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Downloads/jackson-databind-2.15.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
