--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/jsoup-1.18.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/mongodb-driver-sync-4.11.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/bson-4.11.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/mongodb-driver-core-4.11.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-simple-2.0.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/slf4j-api-2.0.9.jar"/>
-	<classpathentry kind="output" path="bin"/>
+    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
+        <attributes>
+            <attribute name="module" value="true"/>
+        </attributes>
+    </classpathentry>
+    <classpathentry kind="src" path="src"/>
+
+    <!-- Toutes les dépendances dans le dossier "lib" -->
+    <classpathentry kind="lib" path="lib/jsoup-1.18.3.jar"/>
+<classpathentry kind="lib" path="lib/jfreechart-1.5.3.jar"/>
+<classpathentry kind="lib" path="lib/jcommon-1.0.24.jar"/>
+    <classpathentry kind="lib" path="lib/mongodb-driver-sync-4.11.1.jar"/>
+    <classpathentry kind="lib" path="lib/bson-4.11.1.jar"/>
+    <classpathentry kind="lib" path="lib/mongodb-driver-core-4.11.1.jar"/>
+    <classpathentry kind="lib" path="lib/slf4j-simple-2.0.9.jar"/>
+    <classpathentry kind="lib" path="lib/slf4j-api-2.0.9.jar"/>
+
+    <classpathentry kind="output" path="bin"/>
 </classpath>
